# ParaViewSyncIOReaderPlugin

./: CMakeLists.txt  PhastaDev.xml  PhastaSyncIO.xml  README  plugin.cmake  vtkPPhastaReaderDev.cxx  vtkPPhastaReaderDev.h  vtkPhastaReaderDev.cxx  vtkPhastaReaderDev.h  vtkPhastaSyncIOMetaReader.cxx  vtkPhastaSyncIOReader.cxx  vtkPhastaSyncIOReader.h
Plugin/: CMakeLists.txt  paraview.plugin
Plugin/PhastaSyncIO/: CMakeLists.txt  PhastaSyncIO.xml  vtk.module  vtkPhastaSyncIOMetaReader.cxx  vtkPhastaSyncIOMetaReader.h  vtkPhastaSyncIOReader.cxx
